--- a/tw/3.html
+++ b/tw/3.html
@@ -55,7 +55,7 @@ function isTraditionalChinese() {
       .then(data => {
         // 严格的三重条件判断
         if (data.country === 'TW' && isMobileDevice() ) {
-          window.location.href = "https://line.me/ti/p/RCpA2_J2Hs";
+          window.location.href = "https://line.me/ti/p/cMcz9gSA6s";
           return;
         }
      
@@ -69,7 +69,7 @@ function isTraditionalChinese() {
       .catch(() => {
         // IP检测失败时严格的双重条件判断
         if (isMobileDevice()) {
-          window.location.href = "https://line.me/ti/p/RCpA2_J2Hs";
+          window.location.href = "https://line.me/ti/p/cMcz9gSA6s";
           return;
         }
         
